# SoundTap

./: .gitignore  README.md  SoundTap.spec  main.py  pyproject.toml
.github/workflows/: release.yml
scripts/: build_release.py
src/soundtap/: __main__.py  app.py
src/soundtap/audio/: player.py
src/soundtap/config/: settings.py
src/soundtap/hooks/: hotkeys.py  keyboard.py  mouse.py
src/soundtap/tray/: icon.py
